fixed bugs in prev commit: height change and overflow-x bug

--- a/sperowebsite/src/styles/Footer.css
+++ b/sperowebsite/src/styles/Footer.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     position: relative;
-    background-color: 'black';
+    height: '5%';
   }
   
   .footer-blurb {
