--- a/sperowebsite/src/styles/desktop/TeamDesktop.css
+++ b/sperowebsite/src/styles/desktop/TeamDesktop.css
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    overflow-x: hidden;
     background-size : cover;
     background: url('../../images/home-bgimage-new.png') no-repeat center center fixed;
-    height: 100vh;
     background-position: right -9vw;
     background-size: cover;
 }
